Optimize JVM settings, remove slf4j-nop, and improve Minecraft launch config
Co-authored-by: itemsatisthediabel <itemsatisthediabel@gmail.com>